add jwt token in both Gateway and Microservices

--- a/IDGF.Core/appsettings.json
+++ b/IDGF.Core/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "JWTBearerSettings": {
+    "Issuer": "https://radin.tech/",
+    "Audience": "https://usermangement.channel.com/",
+    "Key": "Xl2h0A+PVv8a5fK8f4x2RkYsnwZ+W04U2d8buwpHGoM="
+  },
+  "ServiceUrls": {
+    "IdentityAPI": "https://localhost:7044"
+  },
   "AllowedHosts": "*"
 }
