--- a/IDGF.ReverseProxy/appsettings.json
+++ b/IDGF.ReverseProxy/appsettings.json
@@ -13,13 +13,20 @@
         "ClusterId": "auth_cluster",
         "Match": {
           "Path": "identity/{**catch-all}"
-        }
+        },
+        "Transforms": [
+          { "PathRemovePrefix": "identity" }
+        ]
       },
       "core_route": {
         "ClusterId": "core_cluster",
         "Match": {
           "Path": "core/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "RequireAuthenticatedUser",
+        "Transforms": [
+          { "PathRemovePrefix": "core" }
+        ]
       }
     },
     "Clusters": {
