--- a/IDGF.ReverseProxy/appsettings.Development.json
+++ b/IDGF.ReverseProxy/appsettings.Development.json
@@ -22,7 +22,11 @@
         "ClusterId": "core_cluster",
         "Match": {
           "Path": "core/{**catch-all}"
-        }
+        },
+        "AuthorizationPolicy": "RequireAuthenticatedUser",
+        "Transforms": [
+          { "PathRemovePrefix": "core" }
+        ]
       }
     },
     "Clusters": {
