add docker compose files

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,4 @@
 /IDGF.ReverseProxy/bin
 /IDGF.Core/obj/Debug/net8.0/IDGF.Core.AssemblyInfoInputs.cache
 /IDGF.Core/obj/Debug/net8.0/IDGF.Core.AssemblyInfo.cs
+/obj/Docker
