--- a/WebApiExample/Dockerfile
+++ b/WebApiExample/Dockerfile
@@ -1,27 +1,33 @@
-#See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
+# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
+# This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
-USER app
+USER $APP_UID
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 8081
+EXPOSE 7044
+EXPOSE 5026
 
+
+# This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["WebApiExample/WebApiExample.csproj", "WebApiExample/"]
+COPY ["WebApiExample/IDGF-Auth.csproj", "WebApiExample/"]
 COPY ["BackEndInfrsastructure/BackEndInfrastructure.csproj", "BackEndInfrsastructure/"]
-COPY ["Migrations.Oracle/Migrations.Oracle.csproj", "Migrations.Oracle/"]
-COPY ["WebApiExample.DB/WebApiExample.DB.csproj", "WebApiExample.DB/"]
 COPY ["Migrations.SQL/Migrations.SQL.csproj", "Migrations.SQL/"]
-RUN dotnet restore "WebApiExample/WebApiExample.csproj"
+COPY ["WebApiExample.DB/IDGF.AuthDB.csproj", "WebApiExample.DB/"]
+RUN dotnet restore "./WebApiExample/IDGF-Auth.csproj"
 COPY . .
 WORKDIR "/src/WebApiExample"
-RUN dotnet build "WebApiExample.csproj" -c Release -o /app/build
+RUN dotnet build "./IDGF-Auth.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
+# This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
-RUN dotnet publish "WebApiExample.csproj" -c Release -o /app/publish /p:UseAppHost=false
+ARG BUILD_CONFIGURATION=Release
+RUN dotnet publish "./IDGF-Auth.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
+# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "WebApiExample.dll"]
+ENTRYPOINT ["dotnet", "IDGF-Auth.dll"]
