--- a/WebApiExample/IDGF-Auth.csproj
+++ b/WebApiExample/IDGF-Auth.csproj
@@ -7,6 +7,7 @@
     <InvariantGlobalization>false</InvariantGlobalization>
     <UserSecretsId>a1ea8316-72b4-40e8-9799-df8ca178c8d0</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
