update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /IDGF.Core/obj/Debug/net8.0/IDGF.Core.AssemblyInfoInputs.cache
 /IDGF.Core/obj/Debug/net8.0/IDGF.Core.AssemblyInfo.cs
 /obj/Docker
+/obj/Debug
