--- a/IDGF.ReverseProxy/Properties/launchSettings.json
+++ b/IDGF.ReverseProxy/Properties/launchSettings.json
@@ -33,8 +33,8 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/weatherforecast",
       "environmentVariables": {
-        "ASPNETCORE_HTTPS_PORTS": "8081",
-        "ASPNETCORE_HTTP_PORTS": "8080"
+        //"ASPNETCORE_HTTPS_PORTS": "8081",
+        "ASPNETCORE_HTTP_PORTS": "7074"
       },
       "publishAllPorts": true,
       "useSSL": true
