Add Mandeh Apis - Put,Delete,Get

--- a/IDGF.Core/appsettings.Development.json
+++ b/IDGF.Core/appsettings.Development.json
@@ -13,5 +13,9 @@
   "ServiceUrls": {
     "IdentityAPI": "https://localhost:7044"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SQLServerActivaityStatus": "true",
+    "DefaultConnectionSQLServer": "Data Source=COM-482\\SQLSERVER2022;Initial Catalog=db_dgf1;Integrated Security=true;TrustServerCertificate=Yes"
+  }
 }
