--- a/IDGF.Core/appsettings.json
+++ b/IDGF.Core/appsettings.json
@@ -13,6 +13,10 @@
   "ServiceUrls": {
     "IdentityAPI": "https://localhost:7044"
   },
+  "ConnectionStrings": {
+    "SQLServerActivaityStatus": "true",
+    "DefaultConnectionSQLServer": "Data Source=COM-482\\SQLSERVER2022;Initial Catalog=db_dgf1;Integrated Security=true;TrustServerCertificate=Yes"
+  },
   "AllowedHosts": "*"
 }
 
