--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,4 @@
 /IDGF.ReverseProxy/IDGF.ReverseProxy.csproj.user
 /WebApiExample/IDGF-Auth.csproj.user
 /InfrastractureImplemention.slnLaunch.user
+/IDGF.Core/IDGF.Core.csproj.user
