--- a/IDGF.ReverseProxy/appsettings.Production.json
+++ b/IDGF.ReverseProxy/appsettings.Production.json
@@ -33,14 +33,14 @@
       "auth_cluster": {
         "Destinations": {
           "auth_destination": {
-            "Address": "https://localhost:7044/"
+            "Address": "http://localhost:8089/"
           }
         }
       },
       "core_cluster": {
         "Destinations": {
           "core_destination": {
-            "Address": "https://localhost:7135/"
+            "Address": "http://localhost:8090/"
           }
         }
       }
