--- a/IDGF.Core/appsettings.json
+++ b/IDGF.Core/appsettings.json
@@ -13,10 +13,9 @@
   "ServiceUrls": {
     "IdentityAPI": "https://localhost:7044"
   },
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "SQLServerActivaityStatus": "true",
-    "DefaultConnectionSQLServer": "Data Source=COM-482\\SQLSERVER2022;Initial Catalog=db_dgf1;Integrated Security=true;TrustServerCertificate=Yes"
-  },
-  "AllowedHosts": "*"
+    "DefaultConnectionSQLServer": "Server=COM-482\\SQLSERVER2022;Database=db_dgf1;User Id=sa;Password=123321Aa!;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  }
 }
-
