--- a/IDGF.Core/appsettings.Development.json
+++ b/IDGF.Core/appsettings.Development.json
@@ -16,6 +16,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SQLServerActivaityStatus": "true",
-    "DefaultConnectionSQLServer": "Data Source=COM-482\\SQLSERVER2022;Initial Catalog=db_dgf1;Integrated Security=true;TrustServerCertificate=Yes"
+    "DefaultConnectionSQLServer": "Server=10.81.14.21;Database=db_dgf1;User Id=sa;Password=Ehs@n34182;TrustServerCertificate=True;MultipleActiveResultSets=True"
   }
 }
