Revert the changes of appsetting

--- a/IDGF.Core/appsettings.Development.json
+++ b/IDGF.Core/appsettings.Development.json
@@ -16,6 +16,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "SQLServerActivaityStatus": "true",
-    "DefaultConnectionSQLServer": "Server=10.81.14.21;Database=db_dgf1;User Id=sa;Password=Ehs@n34182;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "DefaultConnectionSQLServer": "Server=COM-482\\SQLSERVER2022;Database=db_dgf1;User Id=sa;Password=123321Aa!;TrustServerCertificate=True;MultipleActiveResultSets=True"
   }
 }
