--- a/IDGF.Core/appsettings.Development.json
+++ b/IDGF.Core/appsettings.Development.json
@@ -17,5 +17,8 @@
   "ConnectionStrings": {
     "SQLServerActivaityStatus": "true",
     "DefaultConnectionSQLServer": "Server=COM-482\\SQLSERVER2022;Database=db_dgf1;User Id=sa;Password=123321Aa!;TrustServerCertificate=True;MultipleActiveResultSets=True"
+  },
+  "FileStorageSettings": {
+    "BaseUploadPath": "G:\\FileServer"
   }
 }
