--- a/IDGF.Core/appsettings.Development.json
+++ b/IDGF.Core/appsettings.Development.json
@@ -19,6 +19,6 @@
     "DefaultConnectionSQLServer": "Server=COM-482\\SQLSERVER2022;Database=db_dgf1;User Id=sa;Password=123321Aa!;TrustServerCertificate=True;MultipleActiveResultSets=True"
   },
   "FileStorageSettings": {
-    "BaseUploadPath": "G:\\FileServer"
+    "BaseUploadPath": "E:\\FileServer"
   }
 }
