--- a/WebApiExample/appsettings.Production.json
+++ b/WebApiExample/appsettings.Production.json
@@ -18,5 +18,12 @@
     "DefaultConnectionOracle": "User Id=hh;Password=hh;Data Source=20.20.20.20:1521/odb;",
     "SeriLogDBOracle": "User Id=hswitch;Password=hswitch;Data Source=20.20.20.20/odb;"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpSettings": {
+    "Host": "smtp.gmail.com",
+    "Port": 587,
+    "FromAddress": "radinfraud@gmail.com",
+    "FromPassword": "fndwoysrazwzgtsr"
+  },
+  "ClientAppUrl": "https://your-frontend-app.com"
 }
